--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "demo-ghostsheet-02",
-  "version": "0.0.0",
-  "description": "",
-  "main": "Gruntfile.js",
+  "name": "ghostsheet2",
+  "version": "2.0.0",
+  "description": "Fetch published google spreadsheet data",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "mach3<http://github.com/mach3>",
+  "license": "MIT",
   "dependencies": {
     "grunt": "^0.4.5",
-    "grunt-php": "^0.4.0"
+    "grunt-php": "^0.4.0",
+    "scraper": "0.0.9",
+    "underscore": "^1.6.0"
   }
 }
