--- a/package.json
+++ b/package.json
@@ -6,12 +6,25 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "mach3<http://github.com/mach3>",
+  "author": "mach3 <http://github.com/mach3>",
   "license": "MIT",
   "dependencies": {
     "grunt": "^0.4.5",
     "grunt-php": "^0.4.0",
     "scraper": "0.0.9",
     "underscore": "^1.6.0"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/mach3/ghostsheet2.git"
+  },
+  "keywords": [
+    "google",
+    "spreadsheet"
+  ],
+  "bugs": {
+    "url": "https://github.com/mach3/ghostsheet2/issues"
+  },
+  "homepage": "https://github.com/mach3/ghostsheet2"
 }
