--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
   "author": "mach3 <http://github.com/mach3>",
   "license": "MIT",
   "dependencies": {
-    "grunt": "^0.4.5",
-    "grunt-php": "^0.4.0",
-    "scraper": "0.0.9",
-    "underscore": "^1.6.0"
+    "grunt": ">=0.4.5",
+    "grunt-php": ">=0.4.0",
+    "underscore": ">=1.6.0",
+    "cheerio-httpcli": ">=0.2.0"
   },
   "devDependencies": {},
   "repository": {
